<resources>
    <string name="app_name">Repetitor</string>
    <string name="specialists">Специалисты</string>
    <string name="favorites">Избранное</string>
    <string name="about">О Нас</string>
    <string name="search">Поиск</string>

    <string name="search_list">Список</string>
    <string name="b_clear">Очистить</string>
    <string name="b_search">Найти</string>
    <string name="info_subject">Предмет:</string>
    <string name="info_price">Цена:</string>
    <string name="info_phone">Телефон:</string>
    <string name="info_city">Город:</string>
    <string name="info_experience">Опыт:</string>
    <string name="all_disciplines">Все предметы</string>
    <string name="all_cities">Все города</string>
    <string name="to_favorites">В избранные</string>
    <string name="contact">Связаться</string>
    <string name="repetitor">Репетитор</string>
    <string name="comment">Комментарий</string>
    <string name="contact_name">Имя</string>
    <string name="contact_phone">Телефон</string>
    <string name="contact_place">Где занятия</string>
    <string name="contact_send">Оправить</string>
    <string name="contact_title">Связь</string>
    <string name="message">Сообщение</string>
    <string name="error">Ошибка</string>
    <string name="error_unfilled_fields">Заполнены не все поля</string>
    <string name="favorites_list_empty">Список пуст</string>
    <string name="search_list_empty">Ничего не найдено. Попробуйте изменить критерии поиска.</string>
    <string name="no_server_connection">Нет связи с сервером</string>
    <string name="message_sent">Сообщение отправлено</string>
    <string name="contact_us">Связаться с нами</string>
    <string name="about_us_text">Тобі потрібна допомога в підготовці до ЗНО або успішно вивчати незрозумілі предмети?\nНаш додаток тобі допоможе! Ти зможеш легко знайти потрібного репетитора у твоєму місті і за ціною, яка тебе влаштовує!\nБаза репетиторів по різним галузям країни у безкоштовному доступі – в нашому додатку! Пошук   стане зручним і легким, а зв\'язок з репетитором і заняття будуть проходити на відмінно.\nПо кожному репетитору є найважливіші дані для вас: предмет, місто, ціна за заняття, формат заняття: вдома, у репетитора, по скайп. У додатку можна одразу ознайомитися з переліком всіх репетиторів і відправити заявку на зв\'язок з ним.\nПошук репетиторів здійснювати, скориставшись зручним фільтром: \n• пошук репетиторів за будь-яким регіоном України;\n• фільтр за предметом, ціною за заняття та іншими параметрами.\nРепетиторів, що зацікавили вас, можна додавати в перелік закладок «Обрані», щоб швидко отримати доступ до них у будь-який час.\nБезкоштовний мобільний додаток «Пошук репетитора» допоможе швидко и зручно обрати репетитора для занять.\nЗавантаж, користуйся з задоволенням і отримуй нові корисні знання разом з нами!</string>
</resources>
